# vibecheck

./: .gitignore  .vibecheck  Cargo.toml  LICENSE  Makefile  README.md  VERSIONING.md
.cargo/: config.toml
.github/workflows/: update-assets.yml  vibecheck.yml
docs/: coverage.md
scripts/: bump-version.sh  generate_logo.py
src/: lib.rs  main.rs  output.rs  pipeline.rs  report.rs
src/analyzers/: ai_signals.rs  code_structure.rs  error_handling.rs  mod.rs  naming.rs
tests/: self_detection.rs
vibecheck/: Cargo.toml
vibecheck-cli/: Cargo.toml  build.rs
vibecheck-cli/src/: main.rs  output.rs
vibecheck-cli/src/commands/: analyze.rs  heuristics.rs  history.rs  mod.rs  tui.rs  watch.rs
vibecheck-cli/tests/: bump_version.rs
vibecheck-core/: Cargo.toml  build.rs  heuristics.toml
vibecheck-core/src/: cache.rs  colors.rs  heuristics.rs  ignore_rules.rs  lib.rs  merkle.rs  output.rs  pipeline.rs  project_tools.rs  report.rs  store.rs
vibecheck-core/src/analyzers/: mod.rs
vibecheck-core/src/analyzers/cst/: go.rs  javascript.rs  python.rs  rust.rs
vibecheck-core/src/analyzers/text/: ai_signals.rs  code_structure.rs  comment_style.rs  error_handling.rs  idiom_usage.rs  mod.rs  naming.rs
vibecheck-core/tests/: fixture_detection.rs  no_ignored_tests.rs  self_detection.rs
vibecheck-core/tests/fixtures/lru_cache/: claude.go  claude.js  claude.py  claude.rs  copilot.go  copilot.js  copilot.py  copilot.rs  gemini.go  gemini.js  gemini.py  gemini.rs  gpt.go  gpt.js  gpt.py  gpt.rs  human.go  human.js  human.py  human.rs
vibecheck-ml/: Cargo.toml
vibecheck-ml/src/: classifier.rs  ensemble.rs  features.rs  lib.rs  markov.rs  training.rs
vibecheck-ml/tests/: fixture_markov.rs
vibecheck/src/: cache.rs  language.rs  lib.rs  output.rs  pipeline.rs
vibecheck/src/analyzers/: mod.rs
vibecheck/src/analyzers/cst/: go.rs  javascript.rs  mod.rs  python.rs  rust.rs
vibecheck/src/analyzers/text/: code_structure.rs  comment_style.rs  idiom_usage.rs  naming.rs
vibecheck/tests/: self_detection.rs
