[package]
name = "vibecheck"
version = "0.1.0"
edition = "2021"
description = "Detect AI-generated code and attribute it to a model family"
license = "MIT"
default-run = "vibecheck"

[features]
default = ["cli"]
cli = ["dep:clap", "dep:walkdir", "dep:colored", "dep:anyhow"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"], optional = true }
walkdir = { version = "2", optional = true }
colored = { version = "2", optional = true }
anyhow = { version = "1", optional = true }

[[bin]]
name = "vibecheck"
path = "src/main.rs"
required-features = ["cli"]
