[workspace]
members = ["vibecheck-core", "vibecheck-cli"]
resolver = "2"

[workspace.package]
version = "0.2.2"
edition = "2021"
license = "MIT"
readme  = "README.md"

[workspace.dependencies]
serde          = { version = "1", features = ["derive"] }
serde_json     = "1"
vibecheck-core = { path = "vibecheck-core", version = "0.2.2" }
