[package]
name        = "vibecheck-cli"
version     = "0.1.0"
edition.workspace = true
license.workspace = true
description = "CLI tool to detect AI-generated code and attribute it to a model family"
repository  = "https://github.com/o-k-a-y/vibecheck"
keywords    = ["ai", "code-analysis", "cli", "llm", "detection"]
categories  = ["command-line-utilities", "development-tools"]

[[bin]]
name = "vibecheck"
path = "src/main.rs"

[build-dependencies]
vibecheck = { path = "../vibecheck", version = "0.1" }

[dependencies]
vibecheck = { path = "../vibecheck", version = "0.1" }
serde_json.workspace = true
clap    = { version = "4", features = ["derive"] }
walkdir = "2"
colored = "2"
anyhow  = "1"
