[package]
name        = "vibecheck-cli"
version     = "0.1.3"
edition.workspace = true
license.workspace = true
description = "CLI tool to detect AI-generated code and attribute it to a model family"
repository  = "https://github.com/o-k-a-y/vibecheck"
keywords    = ["ai", "code-analysis", "cli", "llm", "detection"]
categories  = ["command-line-utilities", "development-tools"]
readme      = "../README.md"

[[bin]]
name = "vibecheck"
path = "src/main.rs"

[build-dependencies]
vibecheck-core = { path = "../vibecheck-core", version = "0.1.3" }

[dependencies]
vibecheck-core = { path = "../vibecheck-core", version = "0.1.3" }
serde_json.workspace = true
clap       = { version = "4", features = ["derive"] }
walkdir    = "2"
colored    = "2"
anyhow     = "1"
ratatui    = "0.29"
crossterm  = "0.28"
notify     = "7"
git2       = { version = "0.19", default-features = false }
