[package]
name        = "vibecheck-cli"
version.workspace   = true
edition.workspace   = true
license.workspace   = true
readme.workspace    = true
description = "CLI tool to detect AI-generated code and attribute it to a model family"
repository  = "https://github.com/o-k-a-y/vibecheck"
keywords    = ["ai", "code-analysis", "cli", "llm", "detection"]
categories  = ["command-line-utilities", "development-tools"]

[[bin]]
name = "vibecheck"
path = "src/main.rs"

[build-dependencies]
vibecheck-core.workspace = true

[dependencies]
vibecheck-core.workspace = true
serde_json.workspace = true
clap       = { version = "4", features = ["derive"] }
walkdir    = "2"
colored    = "2"
anyhow     = "1"
ratatui    = "0.29"
crossterm  = "0.28"
notify     = "7"
git2       = { version = "0.19", default-features = false }
