[package]
name        = "vibecheck-ml"
version.workspace   = true
edition.workspace   = true
license.workspace   = true
readme.workspace    = true
publish     = false
description = "ML classification engine for vibecheck — feature extraction, classifiers, ensemble models"
repository  = "https://github.com/o-k-a-y/vibecheck"

[features]
default = []

[dependencies]
vibecheck-core = { path = "../vibecheck-core", version = "0.6.0" }
serde.workspace      = true
serde_json.workspace = true
tree-sitter          = "0.25"
ndarray              = { version = "0.16", features = ["serde"] }
linfa                = "0.8"
linfa-logistic       = "0.8"
linfa-bayes          = "0.8"
linfa-trees          = "0.8"

[dev-dependencies]
tree-sitter-rust       = "0.24"
tree-sitter-python     = "0.25"
tree-sitter-javascript = "0.23"
tree-sitter-go         = "0.23"
